--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,23 +1,23 @@
 nav {
     /*background-color: #FDF8E3;*/
+    display: inline-flex;
     width: 100%;
     height: 150px;
     padding: 10px;
    
-}
+} 
 
 #navmenu {
    /*background-color: lightgrey;*/
     margin-top: auto;
     margin-bottom: auto;
     display: inline-flex;
-    align-items: center;
+ 
      
 }
 
 .colormenu {
-    display: inline;
-    margin: auto;
+ 
     list-style-type: none;
 }
 
@@ -26,7 +26,7 @@ li {
 }
 
 li a {
-    display: block;
+    display: inline;
     text-align: right;
     padding: 20px 30px;
     text-decoration: none;
@@ -35,15 +35,19 @@ li a {
     /* Nav Menu Colors */
 .about {
     color:#F3C445;
+    display:inline;
 }
 .projects {
     color: #A4C92B;
+    display:inline;
 }
 .skills {
-        color: #9AC1F0;
+    color: #9AC1F0;
+    display: inline;
 }
 .resume {
     color: #AB78E1;
+    display: inline;
 }
 
 /*break line*/
@@ -57,8 +61,7 @@ li a {
 
 .logo {
        /*background-color: blue;*/
-       width: 23%;
-       size: auto;   
+        size: auto;   
     }
 
 /*middle section */
@@ -126,18 +129,6 @@ p.email {
     width: 23%;    
  }
 
-li {
-    float: left;
-}
-
-li b {
-    display: block;
-    text-align: right;
-    padding: 20px 30px;
-    text-decoration: none;
-
-}
-
 /* My skills Section using CSS flex*/
 
 .mySkills {
@@ -147,40 +138,24 @@ li b {
 div.flexContainer {
     display: flex;
     column-count: 4;
-    column-gap: 50px;
     justify-content: space-around;
-
-    
-  
+    height: auto;
 
 }
-
-/*#flex-container {
-  border: 1px solid black;
-  background-color: rgb(255, 230, 251);
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 30px;
-}
-#flex-container > div {
-  border: 1px solid black;
-  width: 10%;
-  aspect-ratio: 2;
-  padding: 10px;
-  background-color: lightgreen;
-
-.skillslist {
-    list-style-type: none;
-}
-*/
 
 .interaction {
     background-color: #A4C92B;
     display:flex;
     border: 1px solid black;
+    padding: 30px;     
+}
+
+.interlist {
+    list-style-type: none;
+}
+
+.skillsT {
     padding: 30px;
-    
-      
 }
 
 .visual {
@@ -209,3 +184,15 @@ div.flexContainer {
    
 
 }
+
+.FunBox {
+    width: 600px;
+    border: 5px solid #AB78E1;
+    background-color: #FDF8E3;
+    padding: 50px;
+    margin: 20px;
+    text-align: left;
+}
+
+/*My Work Section Constructed Using CSS Grid*/
+
