--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,8 +12,7 @@ nav {
     margin-top: auto;
     margin-bottom: auto;
     display: inline-flex;
- 
-     
+   
 }
 
 .colormenu {
@@ -196,4 +195,4 @@ div.flexContainer {
 
 /*My Work Section Constructed Using CSS Grid*/
 
-/*this is a test for github*/
+/*this is a test number two for github*/
