--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,7 +44,7 @@ li a {
     color: #9AC1F0;
     display: inline;
 }
-.resume {
+.resumeli {
     color: #AB78E1;
     display: inline;
 }
@@ -197,7 +197,7 @@ div.flexContainer {
 /*My Work Section Constructed Using CSS Grid*/
 
 .projectsT {
-    text-align: center;
+    text-align: left;
 }
 
 .lineP {
@@ -211,7 +211,7 @@ div.flexContainer {
 .workGrid {
     display: inline-grid;
     grid-template-columns: 300px 150px 300px 300px;
-    grid-template-rows: 500px;
+    grid-template-rows: 500px, 500px;
    
    
 
@@ -226,11 +226,11 @@ div.flexContainer {
     background-color: #A4C92B;
     color: black;
     height:125px;
-    width: 250px;
+    width: 253px;
     border: 2px solid black;
     border-radius: 15px;
     position: relative;
-    bottom: 20px;
+    bottom: 50px;
     cursor: pointer;
     
 }
@@ -239,11 +239,11 @@ div.flexContainer {
     background-color: #9AC1F0;
     color: black;
     height:125px;
-    width: 250px;
+    width: 253px;
     border: 2px solid black;
     border-radius: 15px;
     position: relative;
-    bottom: 20px;
+    bottom: 50px;
     cursor: pointer;
     
 }
@@ -252,14 +252,14 @@ div.flexContainer {
     max-width: 250px;
     margin: 0 auto;
     border-radius: 12px;
-    grid-column: 1/1;
+    
 
 }
 .dogimg {
     position:relative;
     width: 250px;
     object-fit: cover;
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 15px;
     
 }
@@ -268,39 +268,57 @@ div.flexContainer {
     max-width: 275px;
     margin: 0 auto;
     border-radius: 12px;
-    grid-column: 3/0;
+    
 
 }
 
 .ihwnA {
     position:relative;
     width: 250px;
+    height: 265px;
     object-fit: cover;
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 15px;
     
 }
 /*
-.topleft{
+.pets{
     border-radius: 12px;
     text-align: center;
 }
 
-.bottomleft{
+.wolf{
     border-radius: 12px;
     text-align: center;
 
 }*/
 
-.topright{
+.petsinfo{
     padding: 10px;
     text-align: left;
-    grid-column: 2/2;
+    
 }
 
-.bottomright{
+.wolfinfo{
    
     padding: 10px;
     text-align: left;
-    grid-column: 3/0;
+    
+}
+
+.viewall { 
+    background-color: #AB78E1;
+    border-radius: 10px;
+    width: 200px;
+    height: 75px;
+    display: block;
+    padding: 10px;
+    border: #AB78E1;
+    color: #FDF8E3;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+
+
 }
